# dualbird-upgrade-agent

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
agent/claude-code/: CLAUDE.md
agent/cursor/: mcp.json
agent/cursor/rules/: dualbird-upgrade.mdc
agent/kiro/: POWER.md
eval/: fetch_pyspark_scripts.py  harness.py  run_eval.py
eval/fixtures/: seed__fully_accelerable.py  seed__mixed_formats.py  seed__spark_sql.py  seed__udf_heavy.py  seed__unsupported_aggs.py  seed__window_functions.py
src/dualbird_upgrade_agent/: __init__.py  __main__.py  cli.py  server.py
src/dualbird_upgrade_agent/analyzer/: estimator.py
src/dualbird_upgrade_agent/matrix/: support.py
src/dualbird_upgrade_agent/parser/: dag_parser.py  event_log.py  plan_parser.py  pyspark_parser.py
src/dualbird_upgrade_agent/report/: generator.py
src/dualbird_upgrade_agent/services/: analyze_uploads.py
tests/: test_server.py
