[project]
name = "dualbird-upgrade-agent"
version = "0.1.0"
description = "AI agent that helps upgrade Spark pipelines to use DualBird FPGA acceleration"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
dualbird-upgrade-agent = "dualbird_upgrade_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dualbird_upgrade_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
target-version = "py312"
src = ["src/dualbird_upgrade_agent", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["dualbird_upgrade_agent"]
